pages only tablet adaptive

--- a/css/blocks/header.sass
+++ b/css/blocks/header.sass
@@ -88,7 +88,9 @@
 
 
 .logo
+  margin: 24px 0 16px
   position: relative
+  z-index: 30
   &__text
     padding: 8px 12px 6px
     position: absolute
