--- a/css/blocks/modals.sass
+++ b/css/blocks/modals.sass
@@ -73,8 +73,10 @@
 .callback
   padding: 85px 0
   background: url("../images/bg_callback_ind.jpg") no-repeat center top
+  background-size: cover
   &_bg2
     background: url("../images/bg_callback_office.jpg") no-repeat center top
+    background-size: cover
   h3
     font-size: 40px
     font-weight: 800
@@ -102,8 +104,8 @@
     flex-wrap: wrap
   &__add-file
     margin-top: 30px
-  & .btn_submit
-    width: 45%
+  //& .btn_submit
+  //  width: 45%
   &__notice
     margin-left: 50px
     color: #ffffff
