--- a/css/general.sass
+++ b/css/general.sass
@@ -69,12 +69,14 @@ div, ul, li, a, button
   display: inline-block
   @include font($white, 400, 18px, 1)
   white-space: nowrap
-  +transition
+  max-width: 100%
+  width: fit-content
   +border-radius(24px)
   +box
+  border: none
   z-index: inherit
   cursor: pointer
-  border: none
+  +transition
   &:hover
     +transition
   &__content
@@ -133,10 +135,13 @@ div, ul, li, a, button
     background: $blue
     +round
     +center
+    @include transition(all 0.3s ease-in-out)
     &_light-blue
       background: #2984C0
     &_white
       background: #ffffff
+    &:hover svg
+      margin-left: 10px
   &_submit
     padding: 25px 40px
     font-size: 16px
@@ -238,7 +243,7 @@ div, ul, li, a, button
   &__h1
     @include font($textBlack, 800, 58px, 1)
     &_main
-      margin: 64px 0 40px
+      margin: 1em 0 0.625em
       padding-bottom: 40px
       position: relative
       @include font($textBlack, 800, 64px, 1.1)
@@ -258,13 +263,6 @@ div, ul, li, a, button
   margin-top: 15px
   font-size: 15px
   font-weight: 400
-  //&::after
-  //  margin-top: 20px
-  //  content: ""
-  //  vertical-align: middle
-  //  height: 3px
-  //  width: 60px
-  //  background-color: $blue
   a
     margin-right: 10px
     color: #000000
@@ -291,3 +289,14 @@ div, ul, li, a, button
     height: 3px
     background: #1378BA
 
+.innerWhiteStripe
+  position: relative
+  &::after
+    content: " "
+    position: absolute
+    display: block
+    bottom: 12px
+    left: 0
+    width: 50px
+    height: 3px
+    background: #ffffff
