--- a/css/variables.sass
+++ b/css/variables.sass
@@ -32,7 +32,8 @@ $pastelPink: #FEF4F4
 $pastelBlue: #F4F8FA
 $blue: #1378BA
 $lightBlue: #E7F2F8
+$greyBlue: #CBD5DC
 $green: #29B179
-
+// #E7EEF2
 //  FONTS
 $regular: ProximaNova, sans-serif
