--- a/css/general.sass
+++ b/css/general.sass
@@ -107,7 +107,7 @@ div, ul, li, a, button
     background: linear-gradient(to right, $blue, $green)
     font-weight: 800
     &_small
-      padding: 18px 40px
+      padding: 17px 40px
       font-size: 12px
       +border-radius(24px)
   &_white
@@ -300,3 +300,5 @@ div, ul, li, a, button
     width: 50px
     height: 3px
     background: #ffffff
+  &.hero_case__first-block::after
+    left: calc(50% - 25px)
