--- a/css/responsive/max767.sass
+++ b/css/responsive/max767.sass
@@ -18,7 +18,20 @@
       &::before
         margin-right: 0
 
-
+  .staff
+    &__text
+      flex-direction: column
+      &__sertif
+        margin: 1em 0
+        display: flex
+        align-items: center
+        max-width: 80%
+        svg
+          margin: 0 2em 0 0
+          padding: 0
+        p
+          font-size: 1rem
+          line-height: 1.2
 
   .footer
     padding-bottom: 20px
