--- a/css/responsive/max950.sass
+++ b/css/responsive/max950.sass
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 950px)
 
   .s_hero .hero
-    padding-top: 0
+    padding-top: 2em
 
   .hero h1.white, .hero h1
     margin-top: 1em
